# shopping-assistant-desktop

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  SIGNING.md  package-lock.json  package.json
backend/: Dockerfile  package.json  pyproject.toml  requirements.txt  run_backend.py
backend/src/: background.py  barcode.py  config.py  db.py  debug_amazon.py  debug_selectors.py  main.py  models.py  notifications.py  settings_store.py
backend/src/connectors/: amazon.py  base.py  blockcheck.py  browser.py  ebay.py  health.py  leboncoin.py  registry.py  vinted.py
backend/src/estimation/: engine.py
backend/src/intent/: ollama.py
backend/src/normalization/: engine.py  models.py
backend/src/routes/: admin.py  arbitrage.py  backup.py  connectors.py  deals.py  digest.py  estimate.py  favorites.py  health.py  products.py  search.py  settings.py  stock.py  watch.py
backend/src/scoring/: engine.py
backend/src/scripts/: capture_fixtures.py  seed_trust_lists.py
backend/tests/: conftest.py  test_admin_restore.py  test_alerts.py  test_amazon_parser.py  test_api.py  test_arbitrage.py  test_backup.py  test_barcode.py  test_blockcheck.py  test_connector_health.py  test_deals.py  test_ebay_parser.py  test_estimation.py  test_expense_category.py  test_favorites.py  test_fixtures_parsing.py  test_integration.py  test_intent.py  test_leboncoin.py  test_normalization.py  test_openapi_contract.py  test_scoring.py  test_search_cache.py  test_settings_expenses.py  test_sponsored.py  test_stock_api.py  test_vinted_parser.py  test_watch_api.py
electron/: alerts.js  backup.js  main.js  (+3 more)
(+113 files in other folders)
