[project]
name = "shopping-assistant-scraping"
version = "0.1.0"
description = "Multi-site e-commerce scraping service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "playwright>=1.43.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.22",
    "slowapi>=0.1.9",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W"]
ignore = ["E501", "UP045", "UP017", "UP035", "I001", "W292", "W293"]